--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -8,12 +8,7 @@ import Playground from "./Playground";
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "Avatar",
-    "core",
-    avatarClasses,
-    undefined,
-  );
+  const meta = await getComponentData("Avatar", "core", avatarClasses);
   return { props: { ssg: { meta: meta } } };
 };
 
