--- a/apps/docs/src/pages/components/banner.mdx
+++ b/apps/docs/src/pages/components/banner.mdx
@@ -9,12 +9,7 @@ import Playground from "./Playground";
 import { getComponentData } from "../../utils/utils";
 
 export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData(
-    "Banner",
-    "core",
-    bannerClasses,
-    undefined,
-  );
+  const meta = await getComponentData("Banner", "core", bannerClasses);
   return { props: { ssg: { meta: meta } } };
 };
 
@@ -79,53 +74,49 @@ You can pass a custom icon to the banner by using the `customIcon` prop.
 
 Controlled banner. Click the buttons to display different banners.
 
-```jsx live
+```tsx live
 import { useState } from "react";
 
-export default function Demo() {
-  const SimpleBanner = ({
-      variant,
-      ...others
-    }: Omit<HvBannerProps, "open">) => {
-      const [open, setOpen] = useState(false);
+const SimpleBanner = ({ variant, ...others }: Omit<HvBannerProps, "open">) => {
+  const [open, setOpen] = useState(false);
 
-      return (
-        <>
-          <HvButton
-            onClick={() => setOpen(true)}
-            color="primary"
-            style={{ width: "150px", textTransform: "capitalize", margin: 10 }}
-          >
-            {variant}
+  return (
+    <>
+      <HvButton
+        onClick={() => setOpen(true)}
+        color="primary"
+        style={{ width: "150px", textTransform: "capitalize", margin: 10 }}
+      >
+        {variant}
+      </HvButton>
+      <HvBanner
+        open={open}
+        onClose={() => setOpen(false)}
+        offset={10}
+        variant={variant}
+        showIcon
+        actions={
+          <HvButton variant="secondaryGhost" style={{ color: "inherit" }}>
+            Action
           </HvButton>
-          <HvBanner
-            open={open}
-            onClose={() => setOpen(false)}
-            offset={10}
-            variant={variant}
-            showIcon
-            actions={
-              <HvButton variant="secondaryGhost" style={{ color: "inherit" }}>
-                Action
-              </HvButton>
-            }
-            bannerContentProps={{
-              actionProps: { "aria-label": "Close the banner" },
-            }}
-            {...others}
-          />
-        </>
-      );
-    };
+        }
+        bannerContentProps={{
+          actionProps: { "aria-label": "Close the banner" },
+        }}
+        {...others}
+      />
+    </>
+  );
+};
 
-    return (
-      <>
-        <SimpleBanner variant="default" label="This is a banner." />
-        <SimpleBanner variant="success" label="This is a success banner." />
-        <SimpleBanner variant="error" label="This is an error banner." />
-      </>
-    );
-
+export default function Demo() {
+  return (
+    <>
+      <SimpleBanner variant="default" label="This is a banner." />
+      <SimpleBanner variant="success" label="This is a success banner." />
+      <SimpleBanner variant="error" label="This is an error banner." />
+    </>
+  );
 }
 ```
 
