--- a/apps/docs/src/pages/components/badge.mdx
+++ b/apps/docs/src/pages/components/badge.mdx
@@ -1,9 +1,8 @@
 import { badgeClasses } from "@hitachivantara/uikit-react-core";
 
-import { Description } from "@docs/components/component/Description";
-import { Page } from "@docs/components/component/Page";
-
-import { getComponentData } from "../../utils/utils";
+import { Description } from "@docs/components/page/Description";
+import { Page } from "@docs/components/page/Page";
+import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData("Badge", "core", badgeClasses);
