docs(Select): add component

--- a/apps/docs/src/pages/components/input.mdx
+++ b/apps/docs/src/pages/components/input.mdx
@@ -258,7 +258,7 @@ Inputs not using the visual `label` prop should instead provide an `aria-label` 
 ### Related components
 
 - [`HvTextArea`](/components/textarea)
-- [`HvSelecrt`](/components/select)
+- [`HvSelect`](/components/select)
 - [`HvDatePicker`](/components/datepicker)
 - [`HvTimePicker`](/components/timepicker)
 
