docs: add FormElement & link it to components

--- a/apps/docs/src/pages/components/accordion.mdx
+++ b/apps/docs/src/pages/components/accordion.mdx
@@ -47,7 +47,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Controlled
 
-You can control the state of `HvAccordion` by using the `expanded / onChange` props.
+You can control the state of `HvAccordion` by using the `expanded`/`onChange` props.
 
 ```jsx live
 import { useState } from "react";
