--- a/apps/docs/src/pages/components/date-picker.mdx
+++ b/apps/docs/src/pages/components/date-picker.mdx
@@ -190,6 +190,7 @@ export default function Demo() {
 
 ### Related components
 
+- [`HvFormElement`](/components/form-element)
 - [`HvInput`](/components/input)
 - [`HvTimePicker`](/components/time-picker)
 
