--- a/apps/docs/src/pages/components/input.mdx
+++ b/apps/docs/src/pages/components/input.mdx
@@ -257,6 +257,7 @@ Inputs not using the visual `label` prop should instead provide an `aria-label` 
 
 ### Related components
 
+- [`HvFormElement`](/components/form-element)
 - [`HvTextArea`](/components/textarea)
 - [`HvSelect`](/components/select)
 - [`HvDatePicker`](/components/datepicker)
