--- a/apps/docs/src/pages/components/select.mdx
+++ b/apps/docs/src/pages/components/select.mdx
@@ -140,6 +140,7 @@ const options = [
 
 ### Related components
 
+- [`HvFormElement`](/components/form-element)
 - [`HvDropdown`](/components/dropdown)
 
 </Page>
