--- a/apps/docs/src/pages/components/time-picker.mdx
+++ b/apps/docs/src/pages/components/time-picker.mdx
@@ -96,6 +96,7 @@ export default function Demo() {
 
 ### Related components
 
+- [`HvFormElement`](/components/form-element)
 - [`HvInput`](/components/input)
 - [`HvDatePicker`](/components/date-picker)
 
