--- a/apps/docs/src/pages/components/checkbox.mdx
+++ b/apps/docs/src/pages/components/checkbox.mdx
@@ -46,58 +46,14 @@ export const getStaticProps = async ({ params }) => {
 ### States
 
 ```jsx live
-<HvStack>
-  <HvTypography variant="title3">Disabled</HvTypography>
-  <HvStack direction="row">
-    <HvCheckBox disabled label="Checkbox 1" />
-    <HvCheckBox defaultChecked disabled label="Checkbox 2" />
-    <HvCheckBox indeterminate disabled label="Checkbox 3" />
-  </HvStack>
-  <HvTypography variant="title3">Readonly</HvTypography>
-  <HvStack direction="row">
-    <HvCheckBox readOnly label="Checkbox 1" />
-    <HvCheckBox defaultChecked readOnly label="Checkbox 2" />
-    <HvCheckBox indeterminate readOnly label="Checkbox 3" />
-  </HvStack>
-  <HvTypography variant="title3">Required</HvTypography>
-  <HvStack direction="row">
-    <HvCheckBox required label="Checkbox 1" />
-    <HvCheckBox required defaultChecked label="Checkbox 2" />
-    <HvCheckBox required indeterminate label="Checkbox 3" />
-  </HvStack>
-  <HvTypography variant="title3">Invalid</HvTypography>
-  <HvStack direction="row">
-    <HvCheckBox
-      status="invalid"
-      statusMessage="No way for this to be valid!"
-      label="Checkbox 1"
-    />
-    <HvCheckBox
-      status="invalid"
-      statusMessage="No way for this to be valid!"
-      defaultChecked
-      label="Checkbox 2"
-    />
-    <HvCheckBox
-      status="invalid"
-      statusMessage="No way for this to be valid!"
-      indeterminate
-      label="Checkbox 3"
-    />
-  </HvStack>
-  <HvTypography variant="title3">No label</HvTypography>
-  <HvStack direction="row">
-    <HvCheckBox aria-label="Checkbox 1" />
-    <HvCheckBox defaultChecked aria-label="Checkbox 2" />
-    <HvCheckBox indeterminate aria-label="Checkbox 3" />
-  </HvStack>
-  <HvTypography variant="title3">Semantic</HvTypography>
-  <HvStack direction="row">
-    <HvCheckBox semantic aria-label="Checkbox 1" />
-    <HvCheckBox semantic defaultChecked aria-label="Checkbox 2" />
-    <HvCheckBox semantic indeterminate aria-label="Checkbox 3" />
-  </HvStack>
-</HvStack>
+<div className="flex gap-xs items-start">
+  <HvCheckBox label="Checkbox" />
+  <HvCheckBox required label="Required" />
+  <HvCheckBox defaultChecked label="Checked" />
+  <HvCheckBox checked indeterminate label="Partial" />
+  <HvCheckBox status="invalid" statusMessage="This is invalid!" label="Error" />
+  <HvCheckBox aria-label="No visible label" />
+</div>
 ```
 
 ### Controlled
@@ -123,79 +79,10 @@ export default function Demo() {
 }
 ```
 
-### External error message
+### Related components
 
-A form element can be invalid but render its error message elsewhere. For instance if a business rule error relates to the combination of two or more fields, or if we want to display all the form errors together in a summary section. The aria-errormessage property should reference another element that contains error message text. It can be used when controlling the validation status or when relying on the built-in validations, but the message text computation is reponsability of the app.
-
-```tsx live
-import { useState } from "react";
-
-export default function Demo() {
-  // prettier-ignore
-  const [firstCheckboxErrorMessage, setFirstCheckboxErrorMessage] = useState<string | null>(null);
-  // prettier-ignore
-  const [secondCheckboxErrorMessage,   setSecondCheckboxErrorMessage] = useState<string | null>("No way for the second checkbox to be valid!");
-
-  return (
-    <HvGrid container>
-      <HvGrid container item xs={12} md={6}>
-        <HvGrid item xs={12}>
-          <HvCheckBox
-            required
-            defaultChecked
-            aria-errormessage="firstCheckbox-error"
-            onChange={(_, checked) => {
-              if (checked) {
-                setFirstCheckboxErrorMessage(null);
-              } else if (!checked) {
-                setFirstCheckboxErrorMessage(
-                  "You must check the first checkbox",
-                );
-              }
-            }}
-            label="First Checkbox"
-          />
-        </HvGrid>
-        <HvGrid item xs={12}>
-          <HvCheckBox
-            status="invalid"
-            aria-errormessage="secondCheckbox-error"
-            onChange={() => {
-              setSecondCheckboxErrorMessage(
-                "No way for the second checkbox to be valid! I told you!",
-              );
-            }}
-            label="Second Checkbox"
-          />
-        </HvGrid>
-      </HvGrid>
-
-      <HvGrid item xs={12} md={6}>
-        <div className="bg-negative_20 text-base_dark p-md">
-          <HvTypography
-            component="h4"
-            variant="title4"
-            className="text-inherit"
-          >
-            Form errors:
-          </HvTypography>
-          <ul className="my-sm pl-md">
-            {firstCheckboxErrorMessage && (
-              <li id="firstCheckbox-error" aria-live="polite">
-                {firstCheckboxErrorMessage}
-              </li>
-            )}
-            {secondCheckboxErrorMessage && (
-              <li id="secondCheckbox-error" aria-live="polite">
-                {secondCheckboxErrorMessage}
-              </li>
-            )}
-          </ul>
-        </div>
-      </HvGrid>
-    </HvGrid>
-  );
-}
-```
+- [`HvFormElement`](/components/form-element)
+- [`HvInput`](/components/input)
+- [`HvRadio`](/components/radio)
 
 </Page>
