--- a/apps/docs/src/pages/components/textarea.mdx
+++ b/apps/docs/src/pages/components/textarea.mdx
@@ -98,6 +98,7 @@ function makeLogLine() {
 
 ### Related components
 
+- [`HvFormElement`](/components/form-element)
 - [`HvInput`](/components/input)
 
 </Page>
