docs(Playground): fix children rendering & component name

--- a/apps/docs/src/pages/components/accordion.mdx
+++ b/apps/docs/src/pages/components/accordion.mdx
@@ -36,8 +36,9 @@ export const getStaticProps = async ({ params }) => {
     },
   }}
   componentProps={{ style: { width: "50%" } }}
-  children={<div>My accordion example content</div>}
-/>
+>
+  <div>My accordion example content</div>
+</Playground>
 
 <Callout type="info">
   You can use the `HvSection` component to create an accordion group that better
