--- a/apps/docs/src/pages/components/select.mdx
+++ b/apps/docs/src/pages/components/select.mdx
@@ -33,17 +33,14 @@ export const getStaticProps = async ({ params }) => {
   componentProps={{
     placeholder: "Select a value",
   }}
-  children={
-    <>
-      <HvOption value="ar">Argentina</HvOption>
-      <HvOption value="bg">Belgium</HvOption>
-      <HvOption value="pt">Portugal</HvOption>
-      <HvOption value="pl">Poland</HvOption>
-      <HvOption value="sp">Spain</HvOption>
-      <HvOption value="us">United States</HvOption>
-    </>
-  }
-/>
+>
+  <HvOption value="ar">Argentina</HvOption>
+  <HvOption value="bg">Belgium</HvOption>
+  <HvOption value="pt">Portugal</HvOption>
+  <HvOption value="pl">Poland</HvOption>
+  <HvOption value="sp">Spain</HvOption>
+  <HvOption value="us">United States</HvOption>
+</Playground>
 
 ### Form
 
