--- a/apps/docs/src/pages/components/input.mdx
+++ b/apps/docs/src/pages/components/input.mdx
@@ -260,7 +260,7 @@ Inputs not using the visual `label` prop should instead provide an `aria-label` 
 - [`HvFormElement`](/components/form-element)
 - [`HvTextArea`](/components/textarea)
 - [`HvSelect`](/components/select)
-- [`HvDatePicker`](/components/datepicker)
-- [`HvTimePicker`](/components/timepicker)
+- [`HvDatePicker`](/components/date-picker)
+- [`HvTimePicker`](/components/time-picker)
 
 </Page>
