--- a/apps/docs/src/pages/components/select.mdx
+++ b/apps/docs/src/pages/components/select.mdx
@@ -26,9 +26,9 @@ export const getStaticProps = async ({ params }) => {
     label: { type: "text", defaultValue: "Country" },
     description: { type: "text", defaultValue: "Please select a country" },
     multiple: { type: "check", defaultValue: false },
-    required: { defaultValue: false },
-    readOnly: { defaultValue: false },
-    disabled: { defaultValue: false },
+    required: { type: "check", defaultValue: false },
+    readOnly: { type: "check", defaultValue: false },
+    disabled: { type: "check", defaultValue: false },
   }}
   componentProps={{
     placeholder: "Select a value",
