docs: add `DotPagination` documentation

--- a/apps/docs/src/pages/components/pagination.mdx
+++ b/apps/docs/src/pages/components/pagination.mdx
@@ -44,7 +44,7 @@ export const getStaticProps = async ({ params }) => {
   documentation](/components/dot-pagination) for usage.
 </Callout>
 
-###
+### Usage
 
 ```tsx live
 import { useState } from "react";
