docs: remove outdated project status table

--- a/docs/overview/introduction/Introduction.mdx
+++ b/docs/overview/introduction/Introduction.mdx
@@ -1,6 +1,6 @@
 import { Meta } from "@storybook/addon-docs";
 
-import Resources from "./Resources";
+import { Resources } from "./Resources";
 
 <Meta title="Overview/Introduction" />
 
