--- a/apps/docs/src/pages/examples/tables.mdx
+++ b/apps/docs/src/pages/examples/tables.mdx
@@ -1,7 +1,7 @@
-import { CodeBlock } from "@docs/components/code/CodeBlock";
+import { CodeBlock } from "../../components/code/CodeBlock";
 
-import simpleTable from "@docs/examples/tables/SimpleTable?raw";
-import utils from "@docs/examples/tables/utils?raw";
+import simpleTable from "../../examples/tables/SimpleTable?raw";
+import utils from "../../examples/tables/utils?raw";
 
 <CodeBlock
   title="Simple Table"
