--- a/apps/docs/src/pages/components/app-switcher.mdx
+++ b/apps/docs/src/pages/components/app-switcher.mdx
@@ -5,9 +5,10 @@ import {
 } from "@hitachivantara/uikit-react-core";
 import { Code, LeftAlign } from "@hitachivantara/uikit-react-icons";
 
-import Playground from "@docs/components/code/Playground";
-import { Header } from "@docs/components/Header";
-import { getComponentData } from "@docs/utils/component";
+import { getComponentData } from "../../utils/component";
+
+import { Playground } from "../../components/code/Playground";
+import { Header } from "../../components/Header";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData(
