--- a/apps/docs/src/pages/components/blades.mdx
+++ b/apps/docs/src/pages/components/blades.mdx
@@ -5,9 +5,10 @@ import {
   HvBlades,
 } from "@hitachivantara/uikit-react-lab";
 
-import Playground from "@docs/components/code/Playground";
-import { Header } from "@docs/components/Header";
-import { getComponentData } from "@docs/utils/component";
+import { getComponentData } from "../../utils/component";
+
+import { Playground } from "../../components/code/Playground";
+import { Header } from "../../components/Header";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData("Blades", "lab", bladesClasses);
