--- a/apps/docs/src/pages/components/multi-button.mdx
+++ b/apps/docs/src/pages/components/multi-button.mdx
@@ -10,9 +10,10 @@ import {
   Map,
 } from "@hitachivantara/uikit-react-icons";
 
-import Playground from "@docs/components/code/Playground";
-import { Header } from "@docs/components/Header";
-import { getComponentData } from "@docs/utils/component";
+import { getComponentData } from "../../utils/component";
+
+import { Playground } from "../../components/code/Playground";
+import { Header } from "../../components/Header";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData(
