--- a/apps/docs/src/pages/components/scroll-to-vertical.mdx
+++ b/apps/docs/src/pages/components/scroll-to-vertical.mdx
@@ -7,9 +7,10 @@ import {
   scrollToVerticalClasses,
 } from "@hitachivantara/uikit-react-core";
 
-import Playground from "@docs/components/code/Playground";
-import { Header } from "@docs/components/Header";
-import { getComponentData } from "@docs/utils/component";
+import { getComponentData } from "../../utils/component";
+
+import { Playground } from "../../components/code/Playground";
+import { Header } from "../../components/Header";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData(
