--- a/apps/docs/src/pages/components/tabs.mdx
+++ b/apps/docs/src/pages/components/tabs.mdx
@@ -1,9 +1,10 @@
 import { Callout } from "nextra/components";
 import { HvTab, HvTabs, tabsClasses } from "@hitachivantara/uikit-react-core";
 
-import Playground from "@docs/components/code/Playground";
-import { Header } from "@docs/components/Header";
-import { getComponentData } from "@docs/utils/component";
+import { getComponentData } from "../../utils/component";
+
+import { Playground } from "../../components/code/Playground";
+import { Header } from "../../components/Header";
 
 export const getStaticProps = async ({ params }) => {
   const meta = await getComponentData("Tabs", "core", tabsClasses, ["Tab"]);
