feat(Dialog): add fullHeight & fix styles on large heights
- leverage HvDialogTitle simplifications in HvWizardTitle

--- a/apps/docs/src/pages/components/dialog.mdx
+++ b/apps/docs/src/pages/components/dialog.mdx
@@ -316,6 +316,7 @@ export default function Demo() {
       <pre>{JSON.stringify(postData, null, 2)}</pre>
       <HvDialog
         disableBackdropClick
+        fullHeight
         open={open}
         onClose={() => setOpen(false)}
         aria-describedby={descId}
