chore: remove unneeded types on controls

--- a/apps/docs/src/pages/components/button.mdx
+++ b/apps/docs/src/pages/components/button.mdx
@@ -34,7 +34,7 @@ export const getStaticProps = async ({ params }) => {
       defaultValue: "base",
     },
     disabled: {
-      type: "check",
+      defaultValue: false,
     },
   }}
 >
