--- a/apps/docs/src/pages/components/dropdown-menu.mdx
+++ b/apps/docs/src/pages/components/dropdown-menu.mdx
@@ -49,7 +49,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Customized items
 
-The items in the `dataList` prop can be can be customized with icons, namely with an icon or custom content on the `label` prop.
+The items in the `dataList` prop can be can be customized, namely with an icon or custom content on the `label` prop. Each item can be individually disabled also.
 
 ```tsx live
 <HvDropDownMenu
