--- a/apps/docs/src/pages/components/dropdown.mdx
+++ b/apps/docs/src/pages/components/dropdown.mdx
@@ -66,7 +66,7 @@ export const getStaticProps = async ({ params }) => {
 
 ### Customized items
 
-The items in the `values` prop can be can be customized, namely with an icon or custom content on the `label` prop.
+The items in the `values` prop can be can be customized, namely with an icon or custom content on the `label` prop. Each item can be individually disabled also.
 
 ```tsx live
 <HvDropdown
