--- a/apps/docs/src/pages/components/switch.mdx
+++ b/apps/docs/src/pages/components/switch.mdx
@@ -19,9 +19,9 @@ export const getStaticProps = async ({ params }) => {
   componentName="HvSwitch"
   controls={{
     label: { type: "text", defaultValue: "Switch" },
-    required: { type: "check", defaultValue: false },
-    readOnly: { type: "check", defaultValue: false },
-    disabled: { type: "check", defaultValue: false },
+    required: { defaultValue: false },
+    readOnly: { defaultValue: false },
+    disabled: { defaultValue: false },
   }}
 />
 
