--- a/apps/docs/src/pages/components/select.mdx
+++ b/apps/docs/src/pages/components/select.mdx
@@ -49,7 +49,7 @@ export const getStaticProps = async ({ params }) => {
 </Playground>
 
 <Callout type="info">
-  If you need a features like search or multi-select you should use the
+  If you need features like search or multi-select you should use the
   [`HvDropdown`](/components/dropdown) component.
 </Callout>
 
