docs: ensure styles order on documentation
docs: ensure styles order on documentation

--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -170,7 +170,12 @@ An avatar should be interacted with by wrapping it in an interactable element, s
       BM
     </HvAvatar>
   </HvButton>
-  <HvButton icon overrideIconColors={false} aria-label="Business Manager">
+  <HvButton
+    icon
+    overrideIconColors={false}
+    aria-label="Business Manager"
+    radius="none"
+  >
     <HvAvatar
       backgroundColor="sema19"
       size="md"
@@ -188,7 +193,12 @@ An avatar should be interacted with by wrapping it in an interactable element, s
       status="positive"
     />
   </HvButton>
-  <HvButton icon overrideIconColors={false} aria-label="Clara Soul profile">
+  <HvButton
+    icon
+    overrideIconColors={false}
+    aria-label="Clara Soul profile"
+    radius="none"
+  >
     <HvAvatar
       alt="Clara Soul"
       src="https://i.imgur.com/6sYhSb6.png"
