--- a/apps/docs/src/pages/components/dropdown.mdx
+++ b/apps/docs/src/pages/components/dropdown.mdx
@@ -1,3 +1,4 @@
+import { Callout } from "nextra/components";
 import { dropdownClasses, HvDropdown } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
@@ -52,6 +53,93 @@ The items in the `values` prop can be can be customized, namely with an icon or 
     },
   ]}
 />
+```
+
+### Custom dropdown
+
+<Callout type="info">
+  Please check out the [examples section](/examples/dropdowns) for more samples
+  of custom dropdowns.
+</Callout>
+
+You might need to customize the dropdown content entirely. To do this use the `HvBaseDropdown` component.
+
+```tsx live
+<HvBaseDropdown placeholder="Click to open">
+  <HvPanel>
+    <HvTypography>Your dropdown content</HvTypography>
+  </HvPanel>
+</HvBaseDropdown>
+```
+
+You might want to control yourself the dropdown and its state. In that case you should use the props `expanded` and `onToggle`.
+
+```tsx live
+import { forwardRef, useState } from "react";
+
+export default function Demo() {
+  const [popperOpen, setPopperOpen] = useState(false);
+
+  return (
+    <>
+      <HvButton onClick={() => setPopperOpen((p) => !p)}>
+        {popperOpen ? "Close" : "Open"}
+      </HvButton>
+      <HvBaseDropdown
+        variableWidth
+        expanded={popperOpen}
+        placeholder="Click to open"
+        onToggle={() => setPopperOpen((p) => !p)}
+      >
+        <HvPanel id={"myPanelId"}>
+          <HvTypography>Your dropdown content</HvTypography>
+        </HvPanel>
+      </HvBaseDropdown>
+    </>
+  );
+}
+```
+
+If you want to customize the header of the dropdown, you can use the `headerComponent` prop.
+Don't forget to forward the ref to the component. The `onToggle` callback will be called on the `onClick` event of the header component.
+
+```tsx live
+import { forwardRef, useState } from "react";
+
+const HeaderComponent = forwardRef<HTMLButtonElement, HvDropdownButtonProps>(
+  function HeaderComponent(props, ref) {
+    const { open, ...others } = props;
+    return (
+      <HvIconButton
+        ref={ref}
+        variant="primarySubtle"
+        title="Settings"
+        {...others}
+      >
+        <Settings />
+      </HvIconButton>
+    );
+  },
+);
+
+export default function Demo() {
+  const [popperOpen, setPopperOpen] = useState(false);
+
+  return (
+    <HvBaseDropdown
+      variableWidth
+      expanded={popperOpen}
+      open={popperOpen}
+      headerComponent={HeaderComponent}
+      onToggle={() => setPopperOpen((p) => !p)}
+      classes={{ panel: "rounded-round" }}
+    >
+      <HvPanel id={"myPanelId"}>
+        <HvTypography>Your dropdown content</HvTypography>
+      </HvPanel>
+    </HvBaseDropdown>
+  );
+}
 ```
 
 ### Related components
