--- a/docs/foundation/Icons/Library.mdx
+++ b/docs/foundation/Icons/Library.mdx
@@ -1,11 +1,9 @@
-import { Meta, Unstyled } from "@storybook/addon-docs";
+import { Meta, Story } from "@storybook/addon-docs";
 
-import IconLibrary from "./Library";
+import * as IconLibraryStories from "./Library.stories";
 
-<Meta title="Foundation/Icons/Library" />
+<Meta of={IconLibraryStories} title="Foundation/Icons/Library" />
 
 # Icon Library
 
-<Unstyled>
-  <IconLibrary />
-</Unstyled>
+<Story of={IconLibraryStories.Library} />
