--- a/apps/docs/src/pages/components/banner.mdx
+++ b/apps/docs/src/pages/components/banner.mdx
@@ -7,7 +7,9 @@ import { Page } from "@docs/components/page/Page";
 import { getComponentData } from "@docs/utils/component";
 
 export const getStaticProps = async ({ params }) => {
-  const meta = await getComponentData("Banner", "core", bannerClasses);
+  const meta = await getComponentData("Banner", "core", bannerClasses, [
+    "BannerContent",
+  ]);
   return { props: { ssg: { meta } } };
 };
 
