--- a/apps/docs/src/pages/components/container.mdx
+++ b/apps/docs/src/pages/components/container.mdx
@@ -1,7 +1,7 @@
 import {
   containerClasses,
   HvContainer,
-  HvTypography,
+  HvPanel,
 } from "@hitachivantara/uikit-react-core";
 
 import Playground from "@docs/components/code/Playground";
@@ -18,70 +18,16 @@ export const getStaticProps = async ({ params }) => {
 
 <Page>
 
-```tsx live
-import { useState } from "react";
-import { useWidth } from "@hitachivantara/uikit-react-core";
-
-export default function Demo() {
-  const [maxWidth, setMaxWidth] = useState("md");
-  const [fixed, setFixed] = useState(false);
-  const [disableGutters, setDisableGutters] = useState(false);
-  const width = useWidth();
-
-  return (
-    <div className="flex flex-col gap-sm w-full justify-start">
-      <div className="flex gap-sm">
-        <div className="flex items-center gap-xs">
-          <HvLabel>Maximum width</HvLabel>
-          <HvSelect value={maxWidth} onChange={(evt, val) => setMaxWidth(val)}>
-            <HvOption value="xs" label="xs">
-              xs
-            </HvOption>
-            <HvOption value="sm" label="sm">
-              sm
-            </HvOption>
-            <HvOption value="md" label="md">
-              md
-            </HvOption>
-            <HvOption value="lg" label="lg">
-              lg
-            </HvOption>
-            <HvOption value="xl" label="xl">
-              xl
-            </HvOption>
-          </HvSelect>
-        </div>
-        <HvCheckBox
-          label="Fixed"
-          checked={fixed}
-          onChange={(_, val) => setFixed(val)}
-        />
-        <HvCheckBox
-          label="Disable Gutters"
-          checked={disableGutters}
-          onChange={(_, val) => setDisableGutters(val)}
-        />
-      </div>
-
-      <HvContainer
-        maxWidth={maxWidth}
-        fixed={fixed}
-        disableGutters={disableGutters}
-      >
-        <div className="flex flex-col justify-center items-center h-100px bg-[var(--uikit-colors-atmo3)] border border-[var(--uikit-colors-atmo4)]">
-          <div className="flex">
-            <HvTypography variant="label">Current width:</HvTypography>
-            <HvTypography variant="body">{width}</HvTypography>
-          </div>
-          <div className="flex">
-            <HvTypography variant="label">maxWidth:</HvTypography>
-            <HvTypography variant="body">{maxWidth}</HvTypography>
-          </div>
-        </div>
-      </HvContainer>
-    </div>
-  );
-}
-```
+<Playground
+  Component={HvContainer}
+  componentName="HvContainer"
+  controls={{
+    maxWidth: { defaultValue: "sm" },
+    fixed: { defaultValue: false },
+    disableGutters: { defaultValue: false },
+  }}
+>
+  <HvPanel className="h-100px">Content</HvPanel>
+</Playground>
 
 </Page>
